changed the url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VUE_APP_API_BASE_URL=http://localhost:8080/api/v1/
+VUE_APP_API_BASE_URL=http://ec2-157-175-224-57.me-south-1.compute.amazonaws.com/api/v1
